@@ -15,6 +15,7 @@
 	* Fixed a bug in psize.py: for a pqr file with no ATOM entries but only HETATM entries in it, inputgen.py should still create an APBS input file with reasonable grid lengths
 	* Fixed a bug in Vgrid_integrate: weight w should return to 1.0 after every i, j or k loop is finished 
 	* Fixed a bug in routines.c, now runGB.py and main.py in tools/python/ should be working again instead of producing segfault
+	* Fixed a few bugs in ApbsClient.py.in related to custom-defined APBS Opal service urls, now it should be OK to use custom-defined APBS Opal service urls for PDB2PQR web server installations
 
 #############################################################################
                                  VERSION 1.1.0 
